--- a/index.html
+++ b/index.html
@@ -5,5 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Design</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <h1>Head.</h1>
+        <ul>
+          <li>Works</li>
+          <li>Services</li>
+          <li>Contacts</li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+  </body>
 </html>
