added content to main

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div>
+        <h2>Recipes</h2>
+        <p>
+          Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec
+          viverra eleifend lacus, vitae ullamcor.
+        </p>
+      </div>
+      <div><img src="" alt="" /></div>
+    </main>
   </body>
 </html>
