--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           viverra eleifend lacus, vitae ullamcor.
         </p>
       </div>
-      <div><img src="" alt="" /></div>
+      <div><img src="/image/soup.png" alt="a bow of soup" /></div>
     </main>
   </body>
 </html>
