--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Responsive Design</title>
   </head>
   <body>
     <header>
-      <nav>
-        <h1>Head.</h1>
+      <h1>Head.</h1>
+      <nav class="navlist">
         <ul>
           <li>Works</li>
           <li>Services</li>
