displayed flex on nav

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
       </nav>
     </header>
     <main>
-      <div>
+      <div class="recipe-content">
         <h2>Recipes</h2>
         <p>
           Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec
           viverra eleifend lacus, vitae ullamcor.
         </p>
       </div>
-      <div><img src="/image/soup.png" alt="a bow of soup" /></div>
+      <div class="img-content">
+        <img src="/image/soup.png" alt="a bow of soup" />
+      </div>
     </main>
   </body>
 </html>
