--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Responsive Design</title>
   </head>
   <body>
+    <div class="container">
     <header>
       <h1>Head.</h1>
       <nav class="navlist">
@@ -28,7 +29,7 @@
       </div>
       <div class="img-content">
         <img src="/image/soup.png" alt="a bow of soup" />
-      </div>
+      </div></div>
     </main>
   </body>
 </html>
