resctructured whole folder

--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
         </ul>
       </nav>
     </header>
-    <main>
+     <main><section>
       <div class="recipe-content">
         <h2>Recipes</h2>
         <p>
           Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec
           viverra eleifend lacus, vitae ullamcor.
         </p>
-      </div>
+      </div></section>
+      <section>
       <div class="img-content">
         <img src="/image/soup.png" alt="a bow of soup" />
-      </div></div>
+      </div></div></section>
     </main>
   </body>
 </html>
