--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec
           viverra eleifend lacus, vitae ullamcor.
         </p>
+        <i class="fa-solid fa-arrow-down-long"></i>
       </div></section>
       <section>
       <div class="img-content">
