added media queries & images for mobile & desktop

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div></section>
       <section>
       <div class="img-content">
-        <img src="/image/soup.png" alt="a bow of soup" />
+        <img src="/image/soup-desktop.png" alt="a bow of soup" />
       </div></div></section>
     </main>
   </body>
