--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       </div></section>
       <section>
       <div class="img-content">
+        <picture>
+          <source media="(min-width: )" srcset="">
+        </picture>
         <img src="/image/soup-desktop.png" alt="a bow of soup" />
       </div></div></section>
     </main>
