added source media images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <section>
       <div class="img-content">
         <picture>
-          <source media="(min-width: )" srcset="">
+          <source media="(min-width: 768px )" srcset="./image/soup-tablet.png">
+          <source media="(min-width: 320px )" srcset="./image/soup-mobile.png">
         </picture>
         <img src="/image/soup-desktop.png" alt="a bow of soup" />
       </div></div></section>
